# pyml

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sample_data.csv  test.ipynb  test2.ipynb
data/: mixed_30_dataset.csv  sample_30_dataset.csv
pyml/: __init__.py  config.py  exceptions.py  logger.py
pyml/.github/workflows/: release.yml
pyml/cleaning/: missing_values.py  outliers.py
pyml/core/: base.py
pyml/evaluation/: metrics.py
pyml/intelligence/: auto_selector.py  explainability.py
pyml/loader/: data_loader.py
pyml/model/: model_engine.py
pyml/nlp/: text_processing.py
pyml/pipeline/: auto_pipeline.py
pyml/preprocessing/: balancing.py  encoding.py  scaling.py
pyml/tuning/: tunner.py
pyml/visualization/: plots.py
tests/: test_auto_model_selector.py  test_preprocessing.py  test_smart_advisor.py  test_visualization.py
